--- a/css/cake.css
+++ b/css/cake.css
@@ -162,7 +162,7 @@ header {
     display: flex;
     justify-content: space-between;
     padding: 1em;
-    background-color: var(--clr-purple);
+    background-color: var(--clr-dark);
 }
 
 .logo {
@@ -400,7 +400,8 @@ video {
 
 /* carousel indicators */
 .carousel-control-next,
-.carousel-control-prev {
+.carousel-control-prev,
+.carousel-indicators {
     filter: invert(100%);
 }
 
