--- a/css/honey.css
+++ b/css/honey.css
@@ -165,7 +165,7 @@ header {
     display: flex;
     justify-content: space-between;
     padding: 1em;
-    background-color: var(--clr-purple);
+    background-color: var(--clr-dark);
     color: white;
     text-align: center;
 }
