--- a/css/style.css
+++ b/css/style.css
@@ -468,6 +468,9 @@ header {
     .item-text {
         visibility: hidden;
     }
+    .btn {
+        padding: 1rem 2.5rem;
+    }
 }
 
 .portfolio__item:hover .item-text {
@@ -553,7 +556,7 @@ header {
     
 }
 
-/* testing animation */
+/*  animation */
 @keyframes hand {
     0% { transform: rotate( 0.0deg) }
    10% { transform: rotate(14.0deg) }  /* The following five values can be played with to make the waving more or less extreme */
