--- a/css/manooth.css
+++ b/css/manooth.css
@@ -436,3 +436,30 @@ video {
         padding: 1rem 2.5rem;
     }
 }
+
+
+@media (max-width:600px) {
+
+    header {
+        color: var(--clr-light);
+        background-color: var(--clr-purple)
+    }
+
+    body {
+        background-color: var(--clr-offwhite);
+        color: var(--clr-accent);
+    }
+
+    .role-section,
+    .final-section {
+        background-color: var(--clr-offwhite);
+        color: var(--clr-accent);
+    }
+
+    .process-header {
+        background-color: var(--clr-olive);
+        padding: 1.5rem;
+        width: 100%;
+        color: var(--clr-accent);
+    }
+}
