--- a/css/ui.css
+++ b/css/ui.css
@@ -396,3 +396,26 @@ header {
         padding: 2rem 24rem;
     }
 }
+
+
+@media (max-width:600px) {
+
+    header {
+        color: var(--clr-light);
+        background-color: var(--clr-purple)
+    }
+
+    body {
+        background-color: var(--clr-offwhite);
+        color: var(--clr-accent);
+    }
+
+
+
+    .process-header {
+        background-color: var(--clr-olive);
+        padding: 1.5rem;
+        width: 100%;
+        color: var(--clr-accent);
+    }
+}
