--- a/css/cake.css
+++ b/css/cake.css
@@ -335,10 +335,10 @@ header {
 
 .footer .copyright {
 
-   display: flex;
-   justify-content: flex-end;
-   margin-right: 1rem;
-   padding-top: 2rem;
+    display: flex;
+    justify-content: flex-end;
+    margin-right: 1rem;
+    padding-top: 2rem;
 }
 
 @media (max-width:800px) {
@@ -346,7 +346,7 @@ header {
         margin-right: 0;
         justify-content: center;
     }
-    
+
 }
 
 
@@ -360,28 +360,28 @@ header {
     text-align: center;
 }
 
-  
-    section {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
+
+section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
 
-    /* Proj */
-    .mockup-img {
-        margin-bottom: 1rem;
-    }
-    
+/* Proj */
+.mockup-img {
+    margin-bottom: 1rem;
+}
 
 
-  
- .mockup-container {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            grid-column-gap: 1rem;
 
-        }
+
+.mockup-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-column-gap: 1rem;
+
+}
 
 .intro-container {
     display: grid;
@@ -393,7 +393,9 @@ video {
     height: auto;
 }
 
-.research-section, .persona-section, .test-section {
+.research-section,
+.persona-section,
+.test-section {
     background-color: var(--clr-purple);
     color: white;
 }
@@ -410,6 +412,7 @@ video {
     section {
         padding: 2rem 24rem;
     }
+
     .overview {
         padding: 1rem 1rem;
     }
@@ -418,11 +421,39 @@ video {
 @media (min-width:1000px) {
     .carousel {
         width: 60%;
-}
+    }
 }
 
 @media (min-width: 600px) {
     .cakeVid {
         width: 25%;
+    }
+}
+
+
+@media (max-width:600px) {
+
+    header {
+        color: var(--clr-light);
+        background-color: var(--clr-purple)
+    }
+
+    body {
+        background-color: var(--clr-offwhite);
+        color: var(--clr-accent);
+    }
+
+    .research-section,
+    .persona-section,
+    .test-section {
+        background-color: var(--clr-offwhite);
+        color: var(--clr-accent);
+    }
+
+    .process-header {
+        background-color: var(--clr-olive);
+        padding: 1.5rem;
+        width: 100%;
+        color: var(--clr-accent);
     }
 }
