--- a/css/honey.css
+++ b/css/honey.css
@@ -393,6 +393,12 @@ video {
     section {
         padding: 2rem 24rem;
     }
+    .overview {
+        background-color: var(--clr-offwhite);
+        color: var(--clr-accent);
+        padding: 2rem;
+        border-radius: 10px;
+    }
 }
 
 
