--- a/css/rhino-splits.css
+++ b/css/rhino-splits.css
@@ -583,6 +583,14 @@ video {
     .carousel {
         width: 60%;
 }
+.interviews,
+.div-left,
+.goal-right {
+        background-color: var(--clr-offwhite);
+        color: var(--clr-accent);
+        padding: 2rem;
+        border-radius: 10px;
+}
 }
 
 
