--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,7 @@
 
     --fs-h1: 3rem;
     --fs-h2: 2.25rem;
+    --fs-nav: 1.75rem;
     --fs-h3: 1.25rem;
     --fs-body: 1rem;
 
@@ -36,6 +37,7 @@
     :root {
         --fs-h1: 4.5rem;
         --fs-h2: 3.75rem;
+        --fs-nav: 2.5rem;
         --fs-h3: 1.5rem;
         --fs-body: 1.125rem;
     }
@@ -175,9 +177,27 @@ header {
     right: 0;
     z-index: 100;
 
+
     transform: translateX(100%);
     transition: transform 250ms cubic-bezier(.5, 0, .5, 1);
 }
+/* making nav smaller for desktop */
+/* 
+@media (min-width: 1000px) {
+    .nav {
+        background-color: hsla(0, 0%, 3%, 0.565);
+        box-shadow: -1px 0px 3px 0px rgba(0, 0, 0, 0.75);
+        height: 100%;
+        width: 50%;
+        position: fixed;
+        right: -50%;
+        top: 0;
+        transform: translate3d(-50%, 0, 0);
+        animation-timing-function: 1s ease-in;
+        
+      }
+ 
+} */
 
 .nav__list {
     list-style: none;
@@ -188,6 +208,7 @@ header {
     align-items: center;
     margin: 0;
     padding: 0;
+    
 }
 
 .nav__link {
