--- a/css/honey.css
+++ b/css/honey.css
@@ -163,16 +163,20 @@ h3 {
 
 header {
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
     padding: 1em;
     background-color: var(--clr-dark);
-    color: white;
-    text-align: center;
 }
 
 .logo {
     max-width: 100px;
 }
+
+.logo:focus {
+outline: none;
+}
+
 
 .nav {
     position: fixed;
