--- a/css/ui.css
+++ b/css/ui.css
@@ -160,6 +160,7 @@ h3 {
 
 header {
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
     padding: 1em;
     background-color: var(--clr-dark);
@@ -168,6 +169,11 @@ header {
 .logo {
     max-width: 100px;
 }
+
+.logo:focus {
+outline: none;
+}
+
 
 .nav {
     position: fixed;
