--- a/css/lyrically.css
+++ b/css/lyrically.css
@@ -164,6 +164,7 @@ h3 {
 
 header {
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
     padding: 1em;
     background-color: var(--clr-dark);
@@ -171,6 +172,10 @@ header {
 
 .logo {
     max-width: 100px;
+}
+
+.logo:focus {
+outline: none;
 }
 
 .nav {
