--- a/css/ui.css
+++ b/css/ui.css
@@ -425,3 +425,9 @@ outline: none;
         color: var(--clr-accent);
     }
 }
+
+@media (min-width:600px) {
+    .logo {
+        max-width: 10em;
+    }
+}
