--- a/css/lyrically.css
+++ b/css/lyrically.css
@@ -171,7 +171,7 @@ header {
 }
 
 .logo {
-    max-width: 10rem;
+    max-width: 100px;
 }
 
 .logo:focus {
@@ -516,6 +516,9 @@ video:focus {
 
     .carousel {
         width: 60%;
+    }
+    .logo {
+        max-width: 10em;
     }
 }
 
