--- a/css/lyrically.css
+++ b/css/lyrically.css
@@ -519,15 +519,20 @@ video:focus {
         align-items: center;
     }
 
-    .role-container,
-    .overview,
-    .problem,
-    .research-col {
+  
+    .overview {
         background-color: var(--clr-offwhite);
         color: var(--clr-accent);
         padding: 2rem;
         border-radius: 10px;
         box-shadow: rgb(204, 203, 203) 6px 6px 20px;
+    }
+    .research-col{
+       border: #9bc1bc 4px solid;
+       border-radius: 8px;
+       padding: 2rem;
+       display: flex;
+       align-items: center;
     }
     .img-shadow {
         box-shadow: rgb(204, 203, 203) 6px 6px 20px;
@@ -565,3 +570,29 @@ video:focus {
         color: var(--clr-accent);
     }
 }
+
+/* typewriter animation */
+.typewriter {
+    color: #fff;
+    font-family: monospace;
+    overflow: hidden; /* Ensures the content is not revealed until the animation */
+    border-right: .15em solid orange; /* The typwriter cursor */
+    white-space: nowrap; /* Keeps the content on a single line */
+    margin: 0 auto; /* Gives that scrolling effect as the typing happens */
+    letter-spacing: .15em; /* Adjust as needed */
+    animation: 
+      typing 3.5s steps(30, end),
+      blink-caret .5s step-end infinite;
+  }
+  
+  /* The typing effect */
+  @keyframes typing {
+    from { width: 0 }
+    to { width: 100% }
+  }
+  
+  /* The typewriter cursor effect */
+  @keyframes blink-caret {
+    from, to { border-color: transparent }
+    50% { border-color: orange }
+  }
