--- a/css/rhino-splits.css
+++ b/css/rhino-splits.css
@@ -22,6 +22,10 @@
     --clr-orange: #ed6a5a;
     --clr-yellow: #f4f1bb;
 
+    --clr--white: #fff;
+    --clr--background: #f6f6f6;
+    --clr--black: #000000;
+
     --fs-h1: 3rem;
     --fs-h2: 2.25rem;
     --fs-h3: 1.25rem;
@@ -48,7 +52,7 @@ html {
 }
 
 body {
-    background: var(--clr-olive);
+    background: var(--clr--background);
     color: var(--clr-dark);
     margin: 0;
     font-family: var(--ff-primary);
@@ -305,20 +309,6 @@ outline: none;
 .intro-section {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-}
-
-.design-section,
-.tool-section,
-.comp-section,
-.research-section,
-.insights-section,
-.journey-section,
-.sketches-section,
-.wireframe-section,
-.lessons-section
-{
-    background-color: var(--clr-purple);
-    color: #fff;
 }
 
 
