--- a/css/cake.css
+++ b/css/cake.css
@@ -78,6 +78,11 @@ strong {
     outline-offset: 3px;
 }
 
+h2 {
+    font-family: 'Libre Baskerville', serif;
+    color: var(--clr-dark);
+}
+
 /* Buttons */
 
 .btn {
