--- a/css/rhino-splits.css
+++ b/css/rhino-splits.css
@@ -97,6 +97,11 @@ strong {
     text-align: center;
 }
 
+h2 {
+    font-family: 'Libre Baskerville', serif;
+    color: var(--clr-dark);
+}
+
 /* Buttons */
 
 .btn {
