--- a/css/rhino-splits.css
+++ b/css/rhino-splits.css
@@ -328,7 +328,7 @@ outline: none;
 }
 
 .designTools-section {
-    background-color: var(--clr-offwhite);
+    background-color: var(--clr--white);
     color: #000000;
     padding: 2rem;
     border-radius: 10px;
@@ -337,15 +337,15 @@ outline: none;
 
 
 .research-div {
-    background-color: var(--clr-offwhite);
-    border-radius: 10px;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-template-columns: repeat(2, 1fr);
 }
 
 .research-item {
-    border: solid black 2px;
+    border: solid var(--clr-olive) 4px;
+    border-radius: 10px;
     padding: 1rem;
+    margin: 1rem;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -593,6 +593,9 @@ video:focus {
         padding: 2rem;
         border-radius: 10px;
 }
+.img-shadow {
+    box-shadow: rgb(204, 203, 203) 6px 6px 20px;
+}
 }
 
 
@@ -633,4 +636,5 @@ video:focus {
     .logo {
         max-width: 10em;
     }
+   
 }
